<resources>
    <string name="app_name">Note-ify</string>

    <string name="rate_dialog_title">Rate Note-ify</string>
    <string name="rate_dialog_message">Enjoying Note-ify? Please support us by taking a moment to rate the app. Best, Note-ify team.</string>
    <string name="rate_dialog_ok">Rate Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No Thanks</string>

    <string name="notification_title">Reminder from Note-ify</string>
    <string name="notification_text">You set a reminder on one of your notes. Tap here to take a look.</string>
    <string name="notification_updated">Notification Updated</string>
    <string name="notification_channel_name">Reminder Notification</string>
    <string name="notification_channel_description">Notifications for Reminders set when creating notes.</string>

    <string name="main_menu_icon_content_description">Menu icon</string>
    <string name="underline_checkbox"><u>U</u></string>
    <string name="strike_through_checkbox"><strike>S</strike></string>
    <string name="dark_theme_switch_text">Dark Theme " "</string>
    <string name="share_via_whatsapp">Share via WhatsApp</string>
    <string name="whatsapp_icon_content_description">WhatsApp icon</string>

    <string name="nav_drawer_notes">Notes</string>
    <string name="nav_drawer_new_note">New Note</string>
    <string name="nav_drawer_all_notes">All Notes</string>
    <string name="nav_drawer_folders">Folders</string>
    <string name="nav_drawer_shared_with_me">Shared with Me</string>
    <string name="nav_drawer_bin">Bin</string>
    <string name="nav_drawer_grocery_lists">Grocery Lists</string>
    <string name="nav_drawer_grocery_list">Grocery List</string>
    <string name="nav_drawer_shared_grocery_list">Shared Grocery List</string>
    <string name="nav_drawer_config">Config</string>
    <string name="nav_drawer_themes">Themes</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_account">Account</string>
    <string name="nav_drawer_info">Info</string>
    <string name="nav_drawer_noticeboard">Noticeboard</string>
    <string name="nav_drawer_faq">FAQ</string>

    <string name="toolbar_save">Save</string>
    <string name="toolbar_contacts">Contacts</string>
    <string name="toolbar_share">Share</string>

    <string name="filter_menu_sort_date">Sort: Date</string>
    <string name="filter_menu_sort_alphabetical">Sort: Alphabetical</string>
    <string name="filter_menu_sort_priority">Sort: Priority</string>

    <string name="bottom_nav_terms_of_service">Terms of Service</string>
    <string name="bottom_nav_privacy_policy">Privacy Policy</string>
    <string name="bottom_nav_website">Website</string>

    <string name="register_logo_content_description">Note-ify Logo</string>
    <string name="register_enter_email_hint">Enter Email Address</string>
    <string name="register_enter_password_hint">Enter Password</string>
    <string name="register_confirm_password_hint">Confirm Password</string>
    <string name="register_register_button">Register</string>
    <string name="register_go_to_sign_in_text">Already registered? Sign in here</string>
    <string name="register_guest_mode_button">I\'ll Register Later</string>
    <string name="register_google_sign_in_content_description">Google sign in</string>
    <string name="register_already_registered">Already registered?</string>
    <string name="register_sign_in_here_bold">Sign in here</string>

    <string name="sign_in_sign_in_button">Sign In</string>
    <string name="sign_in_go_to_register">Need an account?</string>
    <string name="sign_in_go_to_forgot_password_text">Forgot password?</string>
    <string name="sign_in_need_an_account_link">Register here</string>
    <string name="sign_in_forgot_password_link">Click here</string>

    <string name="forgot_password_send_link_button">Send Link</string>
    <string name="forgot_password_back_to_sign_in">Back to sign in</string>

    <string name="account_profile_pic_content_description">Profile picture</string>
    <string name="account_email_address_place_holder">email@address.com</string>
    <string name="account_log_out_button">Log Out</string>

    <string name="new_note_title_text">Title</string>
    <string name="new_note_priority_text">Priority</string>
    <string name="new_note_save_button">Save</string>

    <string name="edit_note_save_button">Save</string>
    <string name="edit_note_priority_text">Priority</string>
    <string name="edit_note_title_text">Title</string>

    <string name="search_field_hint">Search by Title or Description</string>
    <string name="search_icon_content_description">Search icon</string>

    <string name="grocery_add_item_input_text">Item Name</string>
    <string name="grocery_number_counter_default">0</string>
    <string name="grocery_minus_button">-</string>
    <string name="grocery_plus_button">+</string>
    <string name="grocery_add_button">add</string>
    <string name="grocery_list_email_address_share_hint">Email Address to Share with</string>
    <string name="grocery_list_share_icon_content_description">Share icon</string>
    <string name="grocery_list_add_item_icon_content_description">Add item icon</string>

    <string name="fingerprint_login_info"><![CDATA[Go to \'Settings\' > \'Security\' > \'Screenlock\' to set up a password, PIN, pattern or fingerprint.]]></string>

    <string name="new_collection_new_folder_info">Tap here to create a new folder</string>
    <string name="new_collection_folder_icon">Folder icon</string>
</resources>
