<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:fadeScrollbars="false"
        android:scrollbarThumbVertical="@color/colorAccent"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="48dp"
                android:contentDescription="@string/register_logo_content_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_splashscreen" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="email address"
                android:ems="10"
                android:hint="@string/register_enter_email_hint"
                android:importantForAutofill="yes"
                android:inputType="textEmailAddress"
                android:padding="14dp"
                android:textColor="@color/colorLightThemeText"
                android:textColorHint="@color/colorLightThemeText"
                android:textSize="14sp"
                app:backgroundTint="@color/colorLightThemeText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoImageView"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/register_enter_password_hint"
                android:importantForAutofill="yes"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textColor="@color/colorLightThemeText"
                android:textColorHint="@color/colorLightThemeText"
                android:textSize="14sp"
                app:backgroundTint="@color/colorLightThemeText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/register_confirm_password_hint"
                android:importantForAutofill="yes"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textColor="@color/colorLightThemeText"
                android:textColorHint="@color/colorLightThemeText"
                android:textSize="14sp"
                app:backgroundTint="@color/colorLightThemeText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                tools:targetApi="o" />

            <Button
                android:id="@+id/buttonSignup"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorAccent"
                android:text="@string/register_register_button"
                android:textAllCaps="false"
                android:textColor="@color/colorLightThemeText"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

            <Button
                android:id="@+id/buttonGuestMode"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimaryDarkTheme"
                android:text="@string/register_guest_mode_button"
                android:textAllCaps="false"
                android:textColor="@color/colorDarkThemeText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonSignup" />

            <ImageView
                android:id="@+id/google_sign_in"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/register_google_sign_in_content_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonGuestMode"
                app:srcCompat="@drawable/fui_ic_googleg_color_24dp" />

            <TextView
                android:id="@+id/textViewSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/register_already_registered"
                android:textAlignment="center"
                android:textColor="@color/colorLightThemeText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/google_sign_in" />

            <TextView
                android:id="@+id/textViewSignin2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_sign_in_here_bold"
                android:textColor="@color/colorLightThemeText"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSignin" />

            <Switch
                android:id="@+id/switchThemes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/dark_theme_switch_text"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSignin2" />

            <TextView
                android:id="@+id/dummy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchThemes" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>