<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".GroceryList">


    <EditText
        android:id="@+id/grocery_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="bottom"
        android:hint="@string/grocery_add_item_input_text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="16sp"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/grocery_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/grocery_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/grocery_number_counter_default"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grocery_item" />

    <Button
        android:id="@+id/button_decrease"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:text="@string/grocery_minus_button"
        app:layout_constraintBottom_toBottomOf="@+id/grocery_amount"
        app:layout_constraintEnd_toStartOf="@+id/grocery_amount"
        app:layout_constraintRight_toLeftOf="@+id/grocery_amount"
        app:layout_constraintTop_toTopOf="@+id/grocery_amount" />

    <Button
        android:id="@+id/button_increase"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:text="@string/grocery_plus_button"
        app:layout_constraintBottom_toBottomOf="@+id/grocery_amount"
        app:layout_constraintEnd_toStartOf="@+id/button_add"
        app:layout_constraintLeft_toRightOf="@+id/grocery_amount"
        app:layout_constraintStart_toEndOf="@+id/grocery_amount"
        app:layout_constraintTop_toTopOf="@+id/grocery_amount" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="@color/colorAccent"
        android:text="@string/grocery_add_button"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        app:layout_constraintBottom_toBottomOf="@+id/button_increase"
        app:layout_constraintLeft_toRightOf="@+id/button_increase"
        app:layout_constraintStart_toEndOf="@+id/button_increase"
        app:layout_constraintTop_toTopOf="@+id/button_increase" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fadeScrollbars="false"
        android:scrollbarThumbVertical="@color/colorAccent"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grocery_amount" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_help" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/buttonBackground"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_collections" />

</android.support.constraint.ConstraintLayout>